# opencrmccb

./: .env.example  .gitignore  AGENTS.md  PLAN_DE_MEJORAS.md  README.md  ROADMAP.md  asdf.md  docker-compose.test.yml  docker-compose.yml
.github/: copilot-instructions.md
backend/: .dockerignore  Cargo.toml  Dockerfile
backend/src/: config.rs  db.rs  envelope.rs  error.rs  lib.rs  main.rs  routes.rs
backend/src/handlers/: activities.rs  admin.rs  ai.rs  audit.rs  auth.rs  calendar.rs  companies.rs  contacts.rs  dashboard.rs  deals.rs  documents.rs  email.rs  health.rs  leads.rs  mod.rs  notifications.rs  oauth.rs  related.rs  reports.rs  search.rs  tags.rs  webhooks.rs  whatsapp.rs
backend/src/middleware/: auth.rs  metrics.rs  rate_limit.rs
backend/src/models/: activity.rs  audit.rs  calendar.rs  company.rs  contact.rs  csv.rs  dashboard.rs  date_flex.rs  deal.rs  document.rs  email.rs  lead.rs  mod.rs  notification.rs  pagination.rs  report.rs  tag.rs  user.rs  validation.rs  webhook.rs
backend/src/queries/: deal_queries.rs  mod.rs
backend/src/repositories/: contact_repo.rs  deal_repo.rs  mod.rs
backend/src/services/: contact_service.rs  crypto.rs  domain_events.rs  email.rs  mod.rs  pg_adapters.rs  webhook_worker.rs
backend/tests/: csv_tests.rs  integration_tests.rs  model_validation_tests.rs  pagination_tests.rs
database/: Dockerfile
docs/: openapi.yaml  pendientes-features.md  pendientes.md  salesforce-like-crm-plan.md
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  (+1 more)
(+161 files in other folders)
