[package]
name = "crm-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "rust_decimal"] }

# Authentication
jsonwebtoken = "9"
bcrypt = "0.16"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
aes-gcm = "0.10"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Environment
dotenvy = "0.15"
base64 = "0.22"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# CSV parsing
csv = "1.3"

# Validation
validator = { version = "0.19", features = ["derive"] }

# Metrics
prometheus = "0.13"

# Email
lettre = { version = "0.11", features = ["tokio1-native-tls"] }

# HTTP client (for OAuth userinfo)
reqwest = { version = "0.12", features = ["json"] }

# Redis
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }

# Decimal for monetary values
rust_decimal = { version = "1", features = ["serde-with-str"] }

# Random state for OAuth
rand = "0.8"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
